--- a/md_csaba.tex
+++ b/md_csaba.tex
@@ -1,8 +1,13 @@
 \section{Molecular Dynamics simulations}
-It is often difficult to get a precise insight into dynamics of a biological system on a molecular scale, since the experimentally feasible resolution in time- and length scales is usually larger than those of the systems and processes of interest.
-% feel free to rephrase :)
+It is often difficult to get a precise insight into dynamics of a biological system on a molecular scale, since the experimentally feasible resolution in time- and length scales is usually larger than those of the systems and processes of interest.\\
 Therefore, most effects can only be measured indirectly (for example, through bulk ensemble methods). Another problem are disturbing factors, which can be hard to control.\\
 These problems do not exist in computer simulations, in which the positions of all particles of the system are known to high precision and a much higher time resolution than the dynamics in the system.\\
+
+%TODO %%%%%%%%%%%%%%%%%
+% Review changes from here
+%TODO %%%%%%%%%%%%%%%%%
+
+
 %resolution sounds good, time scale could be bad too.
 An important tool is Molecular Dynamics simulation (MD). MD can provide atomistic details, but e.g. with coarse-grained models (see \autoref{subsub:coarsegraining}) a length scale of several nanometres is still accessible for microseconds. Therefore, MD is suitable for membranes, proteins and other biomolecules.\\
 %add 1-2 sentences to clarify...
