--- a/results/umbrella.tex
+++ b/results/umbrella.tex
@@ -1,4 +1,5 @@
-From the umbrella simulations the free energy profile was retrieved using \gromacs{} WHAM. In \autoref{bild} the average of the five copies together with the standard deviation can be found for each forcefield. The range between 6$\si{\nano\metre}$ and 7$\si{\nano\metre}$ was set to 0.\\
-As you can see in the plot, the results for C36 and Martini are very similar: both show a depth of $\approx 17.5 \si{\kilo\cal/\mole}$ and the same slope between 3$\si{\nano\metre}$ and 4$\si{\nano\metre}$. However it seems like the Martini profile is shifted to smaller z-distances. One reason for this is, that due to the coarse graining the COM distances alters (in our case the COM distance of Protein and \pip{} decreased by 0.1$\si{\nano\metre}$ after coarse graining). Beyond 4$\si{\nano\metre}$ there is a larger difference: while the free energy profile flattens out in C36, a kink can be found in Martini. This is explained by the different treatment of long range electrostatic interactions. For this Martini just uses a cut off radius, C36 uses PME.\\
-Also Martini with PW uses PME for long range electrostatic interactions and indeed this fits much better to the profile observed in C36. However the binding strength is drastically underestimated when using PW. The same effect was observed by simulations of a single FAK on a \pip{} containing membrane. Here the kinase dissociated from the membrane, which is probably due to an underestimation of the \pip{} binding site in the kinase.\\
+\section{Free energy profile of basic patch}
+From the umbrella simulations the free energy profile was retrieved using \gromacs{} WHAM. In \autoref{bild} the average of the five copies together with the standard deviation can be found for each forcefield. The range between $6\,\si{\nano\metre}$ and $7\,\si{\nano\metre}$ was defined as zero point.\\
+As you can see in the plot, the results for C36 and Martini are very similar: both show a depth of $\approx 17.5 \si{\kilo\joule/\mole}$ and the same slope between $3\,\si{\nano\metre}$ and $4\,\si{\nano\metre}$. However it seems like the Martini profile is shifted to smaller z-distances. One reason for this is, that due to the coarse graining the COM distances alters (in our case the COM distance of Protein and \pip{} decreased by $0.1\,\si{\nano\metre}$ after coarse graining). Beyond $4\,\si{\nano\metre}$ there is a larger difference: while the free energy profile flattens out in C36, a kink can be found in Martini. This is explained by the different treatment of long range electrostatic interactions. For this Martini just uses a cut off radius, C36 uses PME.\\
+Also Martini with PW uses PME for long range electrostatic interactions and indeed it fits much better to the profile observed in C36 for larger distances. However the binding strength is drastically underestimated when using PW. The same effect was observed by simulations of a single FAK on a \pip{} containing membrane. Here the kinase dissociated from the membrane, which is probably due to an underestimation of the \pip{} binding site in the kinase.\\
 The results indicate, that Martini is a suitable simplification for simulating FAK on membranes, which allow much longer simulations of much larger systems.
