--- a/introduction/fak.tex
+++ b/introduction/fak.tex
@@ -8,7 +8,8 @@ The FERM domain and the kinase are connected by a linker region. In contrast to 
 The FAT domain is linked to the kinase by a flexible proline-rich region. FAT targets FA by interacting with talin and paxillin, which are proteins associated with FA \autocite{fatdomain}.
 \subsection{\pip{} binding and activation}
 It is known that FAK triggers several stimuli. In this thesis, however, the focus is on the link of FAK activation and \pip{} binding. Therefore, the different binding sites of FAK for \pip{} and their impacts on FAK activation are discussed below.\\
-\\In the autoinhibited conformation described above, the FERM domain shields the active site of the kinase. An activation of FAK therefore requires the dissociation of these domains \autocite{structFAK}.\\
+\\
+In the autoinhibited conformation described above, the FERM domain shields the active site of the kinase. An activation of FAK therefore requires the dissociation of these domains \autocite{structFAK}.\\
 \pip{} is a phospholipid, which is locally generated in FA due to integrin signaling \autocite{CITATION34}. 
 %TODO: Add something on the pH-sensitivity of PIP2. It can be -3, -4, and -5 with various probabilities, strongly depending on the pH. 
 It has a net charge of -4, but in presence of K the deprotonated state gets promoted resulting in a net charge of -5 \autocite{pip2_minus5}. The electrostatic binding of \pip{} to the basic patch in the F2 subdomain results in long ranged configurational changes, which also influence the interface between the F1 subdomain and the N-lobe. Also the linker region gets less strongly bound, so that an autophosphorylation of \acid{Y}{397} is promoted. However, the \pip{} binding alone has no effect on the catalytic activity, which suggests that the FERM domain is still associated to the kinase \autocites{pap001}{pap003}. For activation, an additional stimulus, either biochemical or mechanical, is needed.\\
