--- a/introduction/setup.tex
+++ b/introduction/setup.tex
@@ -1,28 +1,18 @@
 \section{Protein structure}
-%The present thesis is meant to give an insight into dynamics and characteristics of FAK-FAK interactions as well as interactions with a \pip{} containing membrane obtained from MD simulations. For this purpose the Martini force field and C36 were used.\\
-All simulations were made with starting configurations adapted from previous work in the group (C36 forcefield: \textcite{pap003}, Martini forcefield: \textcite{SARA}). These configurations contain only a FERM-kinase fragment without the FAT domain (residues 35 to 686, PDB 2J0J \autocite{structFAK}).\\
-As explained in \autoref{subsub:coarsegraining} the secondary structure of proteins have to be stabilized in Martini using elastic networks. This was set up by \textcite{SARA}. It acts only between residues of the same domain with a force constant of 830 $\si{\kilo\joule\mole^{-1}\nano\meter^{-2}}$. Therefore the interface between FERM domain and kinase is not affected and the linker is still flexible.
-\section{Free energy of basic patch}
-In the first part of this thesis the free energy landscape of the \pip{} binding to the basic patch was retrieved for C36, Martini and Martini with PW using umbrella sampling.\\
-For simplicity only a part of the F2 subdomain (residues 107 to 219, from here on F2 lobe), which contains the basic patch, was used. The lobe was placed above a \pip{} embedded into a phosphatidylethanolamine (\pope{}) membrane (see \autoref{tobeadded}). With a provided transformation tool \autocite{backwardpy} the whole system was transferred to a Martini structure , to which the elastic network was applied.\\
-After a short equilibration the protein was pulled slowly away from the membrane using a distance pull between the COM of the protein and the COM of the \pip{}. This simulation was used to retrieve starting conformations for the umbrella windows (between 90 and 120, dependent on the resulting sampling). Afterwards each umbrella window was equilibrated for 0.5$\si{\nano\second}$ and then simulated for 6$\si{\nano\second}$ (10$\si{\nano\second}$ for Martini and Martini with PW). For each forcefield the pulling and umbrella sampling was done five times to estimate the statistical error.\\
-The calculation of the free energy was done with \gromacs{} implementation of WHAM \autocite{gromacsWHAMpaper}.
-The presented results are based on a total simulation time of $6.33\,\si{\micro\second}$ for Martini, $5.64\,\si{\micro\second}$ for Martini with PW and $3.88\,\si{\micro\second}$ for C36. % C36: 1=180, 4.2=135, 5=102, 5.2=102, 6=127, Mart: 1=134, 2=126, 3=130, 4=113, 5=130, MartPol: alle=113
-\section{FAK clustering on membrane}
-\label{setup:fakcluster}
-The second part of this thesis addresses the interactions between different FAK. Therefore 25 proteins were simulated on a membrane.\\
-The starting configurations for this system was built of single frames from simulations of a single FAK on a phosphatidylcholine (\popc{}) and \pip{} (15\%) membrane. The frames were chosen equidistant in time over a time span of $50\,\si{\micro\second}$.\\
-\\
-\textcite{SARA} has done simulations with the same setup in previous work, in which she observed an unexpected behaviour of the protein inclination. This inclination shall be quantified as the angle $\beta$ between the z-axis and the vector $\vec{d}_F$ connecting the F1 and F2 subdomain.
-\begin{equation}
-	\cos\left(\beta\right) = \frac{\vec{d}_{F, z}}{d_F}\quad d_F = \left|\vec{d}_F\right|
-\end{equation}
-The distribution of $\beta$ for each of the five different copies can be seen in \autoref{TOBEADDED}. Each copy was simulated for $10\,\si{\micro\second}$.\\
-The red line is from a trajectory, in which the protein fell on the membrane (resulting in a mean value of $90\,\si{\deg}$). There are several reasons why this is rather an artefact of the Martini force field than a possible binding pose of FAK to the membrane as suggested by \textcite{pap002}. The first one is, that in our simulation the interacting residues proposed by \textcite{pap002} are on top of the FAK and not in contact with the membrane (see \autoref{Something cool}). Indeed contact analysis showed, that virtually all residues (in FERM and kinase) were interacting with the membrane. Another one is, that this behaviour was not observed in equivalent all atom simulations in C36 ($1.5\,\si{\micro\second}$ in total). Here two maxima were observed around $8\,\si{\deg}$ and around $20\,\si{\deg}$ (similar to the blue and green curve in \autoref{tobeadded}), the largest observed angle was $40\,\si{\deg}$.\\
-Therefore the inclination was restricted in the simulations for this thesis. This was achieved by applying an external force to the FERM domain. This force is acting onto the F1 and F2 subdomains parallel to the z-axis. It is proportional to the deviation of their z-distance $\Delta z$ from a reference distance $z_0$. An illustration of the force can be found in \autoref{tobeadded}.\\
-For the determination of $z_0$ only the green and the blue distribution were considered, because the large angles observed in the other distributions have not been observed in C36 simulations. The mean value of $\vec{d}_{F, z}$ for these two distributions is $2.228\,\si{\nano\metre}$, which was therefore set as $z_0$.\\
-% TODO: ask Csaba, why we chose 100 as force constant.
-\\
-The frames were arranged (see \autoref{tobeadded}) and the resulting system shortly equilibrated. Afterwards it was simulated for $10\,\si{\micro\second}$. Five copies of the system with different arrangements of the starting frames were used resulting in a total simulation time of  $50\,\si{\micro\second}$. The trajectories are called During the whole simulation each protein was stabilized with the force described above.\\
-\\
-For the simulation options the recommended values were chosen for all simulations and can be found IN THE APPENDIX. All simulations have been done for a temperature of $300\,\si{\kelvin}$.
+All simulations have been done with starting configurations adapted from previous work in the group (C36 forcefield: \textcite{pap003}, Martini forcefield: \textcite{sara}). These configurations contain only a FERM-kinase fragment without the FAT domain and its linker (residues 35 to 686, PDB 2J0J \autocite{structFAK}).\\
+As explained in \autoref{subsub:coarsegraining} the secondary structure of proteins have to be stabilized in Martini using elastic networks. This was set up by \textcite{sara}. It acts only between residues of the same domain with a force constant of 830 $\si{\kilo\joule\mole^{-1}\nano\meter^{-2}}$. Therefore the interface between FERM domain and kinase is not affected and the linker is still flexible.
+\section{Setup 1 - FAK in solution}
+\label{setup:setup1}
+This setup contains a single FAK molecule in Martini structure, which was placed in a waterbox with ions to eliminate net charges. After a short equilibration the system was simulated for $20\,\si{\micro\second}$ at a temperature of $300\si{\kelvin}$. The standard parameters of the Martini forcefield were used as simulation parameters.
+\section{Setup 2 - Free energy of basic patch}
+\label{setup:setup2}
+For this setup only a part of F2 (residues 107 to 219, referred as F2 lobe in the following), which contains the basic patch, was used. The lobe was placed above a single \pip{} embedded into a phosphatidylethanolamine (\pope{}) membrane (see \autoref{tobeadded}). After a short equilibration the F2 lobe was pulled slowly away from the membrane using a distance pull between the COM of the F2 lobe and the COM of \pip{}. This simulation was used to retrieve starting conformations for the umbrella windows.\\
+The starting configuration was set up in C36 and transferred to a Martini (with PW) structure with provided transformation tools \autocite{backwardpy, PW}. In the Martini structures the mentioned elastic network was applied.\\
+The number of umbrella windows was chosen accordingly to the sampling (between 90 and 120 windows). Each window was shortly equilibrated and then simulated for $6\,\si{\nano\second}$ in C36 and $10\,\si{\nano\second}$ in Martini (with PW). From the trajectories of the umbrella windows the free energy profile was calculated using \gromacs{} WHAM implementation \autocite{gromacsWHAMpaper}. For each forcefield five different profiles were obtained to estimate the statistical error.\\
+The presented results are based on a total simulation time of $6.33\,\si{\micro\second}$ for Martini, $5.64\,\si{\micro\second}$ for Martini with PW and $3.88\,\si{\micro\second}$ for C36. The temperature in the simulation was $300\si{\kelvin}$. % C36: 1=180, 4.2=135, 5=102, 5.2=102, 6=127, Mart: 1=134, 2=126, 3=130, 4=113, 5=130, MartPol: alle=113
+\section{Setup 3 - FAK on a \pip{} membrane}
+\label{setup:setup3}
+Setup 3 was adopted from \textcite{sara} and contains a single FAK molecule in Martini structure, which was placed on a phosphatidylcholine (\popc{}) and \pip{} (15\%) membrane. Ions were added to eliminate net charges. In contrast to \textcite{sara} the stabilizing force explained in \autoref{motivation} was applied to the protein.\\
+Five different copies were simulated for $10\,\si{\micro\second}$ each with a temperature of $300\si{\kelvin}$.
+\section{Setup 4 - FAK cluster}
+In order to set up a cluster of multiple FAK molecules 25 different frames were chosen from setup 3 equidistant in time. The frames were arranged on a {5x5} grid. The stabilizing force was applied on each FAK molecule independently. After a short equilibration the system was simulated for $9\,\si{\micro\second}$. Five different copies (regarding to the arrangement of the frames) were set up, resulting in a total simulation time of $45\,\si{\micro\second}$. The temperature was set to $300\si{\kelvin}$.
