--- a/results/forceAnalysis.tex
+++ b/results/forceAnalysis.tex
@@ -1,20 +1,25 @@
-\section{Disturbance by applied force}
-Each of the 25 proteins was stabilized with an external force acting on the FERM domain. These forces have of course impacts on the system, which shall be analysed below.\\%TODO: "shall" the right word here?
-\\
+\subsection{Impacts of the applied force}
+In setup 3 and setup 4 each protein was stabilized with an external force acting on the FERM domain (see \autoref{motivation}). These forces have of course impacts on the FAK molecules, which are analysed below.
+\subsubsection{Distance between F1 and F2}
 First the COM distance of F1 and F2, namely $d_F$, is considered. In \autoref{tobeadded} a hexbinning plot of $d_F$ against the force can be found. The plot shows, that some combinations (below the orange line) are never visited. For a given force, $d_F$ seems to have a lower boundary. This boundary is defined by $d_{F, \text{min}} = z_0 - \Delta z$, where $z_0$ is the reference distance of the force and $\Delta z$ the elongation (proportional to the force), and is reached, if the vector between F1 and F2, $\vec{d}_F$, is parallel to the z-axis.\\
-The plot indicates, that $d_F$ and the force are hardly correlated. This was tested with a linear regression. To not bias the regression by $d_{F, \text{min}}$ only points with a force lower than $0\,\forceunit$ were taken into account. With a p-Value of $23\%$ for the H0 hypothesis slope $m = 0$, the distance $d_F$ and the applied force can be seen as uncorrelated.\\
+The plot indicates, that $d_F$ and the force are hardly correlated, which is tested with a linear regression. To not bias the regression by $d_{F, \text{min}}$ only points with a force lower than $0\,\forceunit$ are taken into account. With a p-Value of $23\%$ for the H0 hypothesis slope $m = 0$, the distance $d_F$ and the applied force can indeed be seen as uncorrelated.
+\subsubsection{Inclination angle of FAK}
+% TODO: important?
+The applied force is directly linked to the angle between the distance vector of F1 and F2 and the z-axis, namely $\beta$. In order to examine how much the forces bias $\beta$, the distribution of $\beta$ for setup 3 (with external force) are compared to equivalent simulations except the stabilizing force (simulations mentioned in \autoref{motivation}).\\
+The distribution of is very similar to those obtained for the unbiased systems, albeit the mean value is determined by the choice of $z_0$. The variance for the biased system is about $18\,\si{\deg}$ and similar to those of the unbiased systems. This indicates, that the fluctuations around the mean value are not restricted crucially by the applied force.\\
 \\
-The applied force is directly linked to the angle between the distance vector of F1 and F2 and the z-axis, namely $\beta$. The approach is meant to prevent falling down of the proteins, but does it changes the distribution of $\beta$ significantly?\\
-For this purpose the distribution of $\beta$ for the generating simulations (see \autoref{setup:fakclust}) with external forces are compared to those without the stabilizing force. The results can be found in \autoref{Tobeadded}.\\
-The location of the mean is determined by the choice of $z_0$. However the variance of the distributions are similar. This indicates, that although the mean of $\beta$ is restricted, the fluctuations around this mean are not restricted crucially by the applied force.
-% TODO: is this really true?
+The force itself has a mean value of $1.47\,\forceunit$ and a standard deviation of $13.13\,\forceunit$. It is skewed to positive values, large deviations with a negative sign are restricted due to $z_0 + \Delta z \le d_F$. Neither additional maxima nor minima are observable in the distribution.
+% TODO: important?
+%Since protein dimers are investigated in the following sections, also the distribution of the forces for the different dimer types should be considered. In \autoref{tobeadded} the forces, which occurred on the different dimers, are presented as boxplots. % number of datapoints in description?
+%The forces acting on a type 1 protein pairs (FERM-FERM) as well as these acting on a type 3 protein pairs (FERM-kinase) are symmetrically distributed around the overall mean. In contrast the forces acting on e.g. type 9 protein pairs are systematically lower than those acting on other types, which has to be taken into account when analysing those dimers.\\
+%One important reason for this can be the sampling. While there are 1 162 144 datapoints for type 1 pairs coming from several different proteins, only 464 datapoints exist for type 9 pairs, mainly observed in one pair only.\\
+%\\
+\subsubsection{Intramolecular distances}
+\label{forceana:intramolec}
+At last the influence of the force on conformational changes inside FAK shall be investigated.\\
+First all distances between interacting residues are tested on correlation with the applied force. For this 10 different proteins without neighbours were picked out of the trajectories from setup 4, each for $1\,\si{\micro\second}$. In \autoref{tobeadded} the calculated Pearson correlation coefficients for significant correlations are shown (only for residues contributing to the interface). Out of these possible residue pairs 270 show a correlation larger than 0.3 or less than -0.3. The slope of these pairs is of magnitude $\pm 20 \text{force unit}/\si{\nano\metre}$. So a change of the force of one standard deviation would lead to a change of roughly $0.6\,\si{\nano\metre}$, which declines the sensitivity to conformational changes a lot.\\
+The sign of the correlation seems to be systematic. Interactions corresponding to the N-lobe (lower part of \autoref{tobeadded}) is dominated by negative values, while the interactions corresponding to the C-lobe show both. However also in this region, i.e. the spot around residues \acid{Y}{180} and \acid{R}{634}, spots of the same correlation sign can be found.\\
+Because the COM distance between F1 and the N-lobe as well as the COM distance between F2 and the C-lobe are used as indicators for conformational changes as well, their dependence upon the force are also important. As already shown in \autoref{sec:fak_sol} these distances cluster in two spots. To test correlations a linear regression of both distances was performed separately for the two spots. All four regressions revealed a significant correlation. However the maximum slope was $0.0015 \si{\nano\metre}/\text{force unit}$. A change of $13\,\forceunit$, which corresponds to one standard deviation in force, would therefore lead to a change of $0.02\,\si{\nano\metre}$. This correlation is therefore negligibly.\\
 \\
-Since protein dimers are investigated in the following sections, also the distribution of the forces for the different dimer types should be considered. In \autoref{tobeadded} the forces, which occurred on the different dimers, are presented as boxplots. % number of datapoints in description?
-The forces acting on a type 1 protein pairs (FERM-FERM) as well as these acting on a type 3 protein pairs (FERM-kinase) are symmetrically distributed around the overall mean. In contrast the forces acting on e.g. type 9 protein pairs are systematically lower than those acting on other types, which has to be taken into account when analysing those dimers.\\
-One important reason for this can be the sampling. While there are 1 162 144 datapoints for type 1 pairs coming from several different proteins, only 464 datapoints exist for type 9 pairs, mainly observed in one pair only.\\
 \\
-At last the influence of the force on conformational changes inside FAK is considered. For this purpose the distances between residue pairs were tested upon a correlation with the applied force. In figure \autoref{tobeadded} the calculated Pearson correlation coefficients for significant correlations are shown for residue pairs of different domains. There are 583 residue pairs with a correlation coefficient $|r| > 0.3$ in total (0 for $|r| > 0.5$), 135 of them are contributing to the interface of the FERM domain and the kinase. However all major spots consist of both, positive and negative correlated distances. Therefore the overall structure should not depend too much on the applied force.\\
-For the correlation calculation 10 different proteins were chosen, each for $1\,\si{\micro\second}$.
-\\
-The applied forces seems to have only slight impacts on the system. The protein structure is well conserved and for most protein pair types no significant dependency was observed. However the missing of poses in the simulations due to the restriction of the angle $\beta$ can not be excluded entirely.
-%% Discussion: further studies on impact to membrane, absolute z-axis
+It is important to see, that in this section only the observed quantities were tested for correlation with the force. It is however possible and probable, that due to the restriction configurations or states are completely missing while others become overpopulated. This effect can not be estimated, but should be kept in mind.
