--- a/results/umbrella.tex
+++ b/results/umbrella.tex
@@ -1,5 +1,8 @@
-\section{Free energy profile of basic patch}
-From the umbrella simulations the free energy profile was retrieved using \gromacs{} WHAM. In \autoref{bild} the average of the five copies together with the standard deviation can be found for each forcefield. The range between $6\,\si{\nano\metre}$ and $7\,\si{\nano\metre}$ was defined as zero point.\\
-As you can see in the plot, the results for C36 and Martini are very similar: both show a depth of $\approx 17.5 \si{\kilo\joule/\mole}$ and the same slope between $3\,\si{\nano\metre}$ and $4\,\si{\nano\metre}$. However it seems like the Martini profile is shifted to smaller z-distances. One reason for this is, that due to the coarse graining the COM distances alters (in our case the COM distance of Protein and \pip{} decreased by $0.1\,\si{\nano\metre}$ after coarse graining). Beyond $4\,\si{\nano\metre}$ there is a larger difference: while the free energy profile flattens out in C36, a kink can be found in Martini. This is explained by the different treatment of long range electrostatic interactions. For this Martini just uses a cut off radius, C36 uses PME.\\
-Also Martini with PW uses PME for long range electrostatic interactions and indeed it fits much better to the profile observed in C36 for larger distances. However the binding strength is drastically underestimated when using PW. The same effect was observed by simulations of a single FAK on a \pip{} containing membrane. Here the kinase dissociated from the membrane, which is probably due to an underestimation of the \pip{} binding site in the kinase.\\
-The results indicate, that Martini is a suitable simplification for simulating FAK on membranes, which allow much longer simulations of much larger systems.
+\subsection{Free energy profile of basic patch}
+In the context of the investigation of FAK falling the free energy profile of the basic patch in F2 was investigated. Because this might be of interest for other applications as well, a short report on the obtained results is given at this point. The used setup is setup 2 described in \autoref{setup:setup2}.\\
+The average profile of the five copies together with the standard deviation for the forcefields C36, Martini and Martini with PW can be found in \autoref{tobeadd}. Here the range between $z = 6\,\si{\nano\metre}$ and $z = 7\,\si{\nano\metre}$ was defined as zero point.\\
+C36 and Martini show both a similar energy depth of $A \approx 17 \si{\kilo\joule/\mole}$ and the same slope between $z = 3\,\si{\nano\metre}$ and $z = 4\,\si{\nano\metre}$. Certainly Martini results in larger values for the free energy, which could originate from an underestimation of electrostatic forces due to the unpolar water beads \autocite{introOrPaper}. For values above $z = 4\,\si{\nano\metre}$ the free energy profile flattens out in C36 while a kink can be observed in Martini. This is due to the different treatment of long range electrostatics: Martini uses a cut off radius, C36 uses PME.\\
+Also Martini with PW uses PME for long range electrostatic interactions and indeed it fits much better to the C36 profile for larger distances. However the binding strength is crucially underestimated in Martini with PW.\\
+It is remarkable, in which extent the Martini force field redraws the results from all-atom simulations. A contribution to this might be, that the parameters for Martini were obtained a.o. from free energy calculations and measurements \autoref{intro}.\\
+\\
+In the used starting configurations the proteins are already bound to \pip{}. Therefore a correct binding strength and the shape near the minimum is of larger interest than a correct sampling for further distances. In addition Martini with PW showed a much higher computational cost. That is why in the following simulations only Martini has been considered.
