--- a/document.tex
+++ b/document.tex
@@ -33,25 +33,17 @@ oneside, % oneside / twoside
 \newcommand{\popc}{POPC}
 \newcommand{\forceunit}{\si{\kilo\joule/\mole/\nano\metre}}
 
-%\newcommand{\fourier}[1]{\mathcal{F}\left( #1 \right)}
-%\newcommand{\revfourier}[1]{\mathcal{F}^{-1}\left( #1 \right)}
-
-
-\captionsetup[subfigure]{labelformat=simple, labelsep=colon}
-\renewcommand{\thesubfigure}{Figure~\thefigure \alph{subfigure}}
-
-\includeonly{results/freeFAK}
 
 \begin{document}
 	
 \chapter{Introduction}
-\include{introduction/fak}
+\input{introduction/fak}
 \chapter{Motivation}
 \input{introduction/motivation}
 \chapter{Methods}
 \section{MD}
 \section{Free energy calculations}
-\section{ConAn :)}
+%\section{ConAn :)}
 %\include{introduction/md}
 %\include{introduction/fec}
 %\include{introduction/characterisation}
