--- a/introduction/characterisation.tex
+++ b/introduction/characterisation.tex
@@ -1,3 +1,5 @@
+For further analysis interactions between two proteins are classified into 9 different interaction types (see \autoref{einbildsagtmehralstausendworte}). Two proteins are interacting, if their minimal distance is smaller than $1.5\,\si{\nano\metre}$ and are called neighbours in this case. In contrast a protein belongs to a cluster, if it has at least one neighbour inside the cluster. A single protein without neighbours has clustersize 1.\\
+SASA
 \section{Characterisation of multiple protein interactions}
 For the later analysis, protein-protein interactions are classified using the following terms.
 \paragraph{Interaction} Proteins or parts of proteins interact, if their minimal distance is smaller than a cut-off distance.
