--- a/results/membrane.tex
+++ b/results/membrane.tex
@@ -1,9 +1,24 @@
 \subsection{Conformational changes}
-In this section the conformation of FAK bound to \pip{} (FAK-PIP) is compared to the observations from \autoref{sec:fak_sol} (FAK-SOL). For this purpose the simulation data of setup 4 was used with the condition, that other FAK molecules are more than $2\,\si{\nano\metre}$ away (0 neighbours). The contact map is based on the same dataset, which was used in \autoref{forceana:intramolec}.\\
+In this section the conformation of FAK bound to \pip{} containing membrane (FAK-MEM) is compared to the observations from \autoref{sec:fak_sol} (FAK-SOL). For this purpose the simulation data of setup 4 was used with the condition, that other FAK molecules are more than $2\,\si{\nano\metre}$ away (0 neighbours). The contact map is based on the same dataset, which was used in \autoref{forceana:intramolec}.\\
 \\
-Analogously to \autoref{sec:fak_sol} the distribution of the COM distances is presented in \autoref{tobeadd} as an hexagonal binning plot. Again, different spots can be obtained. The spot with most encounters (spot 1) as well as the second spot (spot 2) are located at small values for both, $d_\text{F1-N}$ and $d_\text{F2-C}$. These spots show also smaller distances than FAK-SOL. In addition to this two spots appear, one at larger $d_\text{F2-C}$ (spot 3) and one at larger $d_\text{F1-N}$ (spot 4). These are however less populated and not as concentrated as spot 1 and 2. While spot 4 could be identified with spot 2 of FAK-SOL, spot 3 show completely new values for both COM distances.\\
+Analogously to \autoref{sec:fak_sol} the distribution of the COM distances is presented in \autoref{mem:comdist} as an hexagonal binning plot. Again two spots can be identified, which show a large number of encounters. However these spots are much more smeared out than obtained in FAK-SOL. In addition larger values of $d_\text{F2-C}$ disappear. This is expected, as the kinase is also bound to the membrane, resulting in less deviations in the lower part of the protein. Also the contact area of the interface, which can be found in \autoref{mem:contactarea}, indicates a closure of the protein. \\
 \\
-In \autoref{tobeadded} the difference of the contact maps of FAK-SOL and FAK-PIP can be found, again only for the interface. The distances between F2 and the C-lobe tend to get smaller, even if contacts around \acid{R}{665} show another trend. Also the contact between F1 and the N-lobe/activation loop show smaller distances. The RMSF values are increasing for all residue pairs.\\
-Remarkable changes occur in the linker region. The residues around the autophosphorylation site \acid{Y}{397} increase their distances to residues \acid{M}{384} to \acid{S}{390} by up to $0.9\,\si{\nano\metre}$. Also the RMSF values are increased in the linker by up to $0.40\,\si{\nano\metre}$ near \acid{Y}{397}.\\
+In contrast the linker region containing the autophosphorylation site \acid{Y}{397} seems to be released from the two domains. On the one hand the mean distance to residues of the domain increases by up to $0.67\,\si{\nano\metre}$ (\acid{S}{74} and \acid{T}{394}), on the other hand the RMSF values are increasing as well, which indicates a more flexible region.\\
 \\
-With these observations the enhanced autophosphorylation of FAK bound to \pip{} can be comprehended. However the impacts on the interface between the FERM domain and the kinase are quit small. One reason for this could be the applied elastic network. Since electrostatics are treated with a cutoff radius, long range conformational changes have to be transferred along the residues. Therefore the choice of the correct force constant is of large importance to obtain allosteric effects in Martini.
+The obtained results are consistent with previous observations. \pip does not induce the dissociation of the FERM domain and the kinase, but it enhances autophosphorylation. Later can not be simulated in MD simulation, but the changes in the linker region support this assumption.
+%
+%
+%
+\begin{figure}
+	\subcaptionbox{Two dimensional histogram of $d_\text{F1-N}$ and $d_\text{F2-C}$\label{mem:comdist}}[0.46\textwidth]{
+		\includegraphics[height=5cm]{figures/results/membr_f1f2}
+	}\hfill%
+	\subcaptionbox{Contactarea of FERM-kinase interface\label{mem:contactarea}}[0.49\textwidth]{
+		\includegraphics[height=5cm]{figures/results/ca_sol_mem}
+	}%
+	\phantomsubcaption
+\end{figure}
+%
+%
+%
+% TODO: show contact map?
