First final drawft.

--- a/document.tex
+++ b/document.tex
@@ -42,11 +42,13 @@ oneside, % oneside / twoside
 \input{introduction/motivation}
 \chapter{Methods}
 \section{MD}
-\section{Free energy calculations}
-%\section{ConAn :)}
 %\include{introduction/md}
+Will be shortened.
+\section{Free energy calculations}
 %\include{introduction/fec}
-%\include{introduction/characterisation}
+Will be shortened.
+\section{Contact Analysis}
+\input{introduction/characterisation}
 \chapter{Setup}
 \input{introduction/setup}
 \chapter{Results}
