--- a/results/umbrella.tex
+++ b/results/umbrella.tex
@@ -1,4 +1,5 @@
 \subsection{Free energy profile of basic patch}
+\label{results:umbrella}
 In the context of the investigation of FAK falling the free energy profile of the basic patch in F2 was investigated. Because this might be of interest for other applications as well, a short report on the obtained results is given at this point. The used setup is setup 2 described in \autoref{setup:setup2}.\\
 The average profile of the five copies together with the standard deviation for the forcefields C36, Martini and Martini with PW can be found in \autoref{umbrella:profiles}. Here the range between $z = 6\,\si{\nano\metre}$ and $z = 7\,\si{\nano\metre}$ was defined as zero point.\\
 C36 and Martini show both a similar energy depth of $A \approx 17 \si{\kilo\joule/\mole}$ and the same slope between $z = 3\,\si{\nano\metre}$ and $z = 4\,\si{\nano\metre}$. Certainly Martini results in larger values for the free energy, which could originate from an underestimation of electrostatic forces due to the unpolar water beads (see \autoref{subsub:coarsegraining}). For values above $z = 4\,\si{\nano\metre}$ the free energy profile flattens out in C36 while a kink can be observed in Martini. This is due to the different treatment of long range electrostatics: Martini uses a cut off radius, C36 uses PME.\\
