--- a/introduction/setup.tex
+++ b/introduction/setup.tex
@@ -1,4 +1,5 @@
 \section{Protein structure}
+% TODO: cite gromacs wham?
 All simulations have been done with starting configurations adapted from previous work in the group (C36 forcefield: \textcite{pap003}, Martini forcefield: \textcite{sara}). These configurations contain only a FERM-kinase fragment without the FAT domain and its linker (residues 35 to 686, PDB 2J0J \autocite{structFAK}).\\
 As explained in \autoref{subsub:coarsegraining} the secondary structure of proteins have to be stabilized in Martini using elastic networks. This was set up by \textcite{sara}. It acts only between residues of the same domain with a force constant of 830 $\si{\kilo\joule\mole^{-1}\nano\meter^{-2}}$. Therefore the interface between FERM domain and kinase is not affected and the linker is still flexible.
 \section{Setup 1 - FAK in solution}
@@ -7,8 +8,8 @@ This setup contains a single FAK molecule in Martini structure, which was placed
 \section{Setup 2 - Free energy of basic patch}
 \label{setup:setup2}
 For this setup only a part of F2 (residues 107 to 219, referred as F2 lobe in the following), which contains the basic patch, was used. The lobe was placed above a single \pip{} embedded into a phosphatidylethanolamine (\pope{}) membrane (see \autoref{tobeadded}). After a short equilibration the F2 lobe was pulled slowly away from the membrane using a distance pull between the COM of the F2 lobe and the COM of \pip{}. This simulation was used to retrieve starting conformations for the umbrella windows.\\
-The starting configuration was set up in C36 and transferred to a Martini (with PW) structure with provided transformation tools \autocite{backwardpy, PW}. In the Martini structures the mentioned elastic network was applied.\\
-The number of umbrella windows was chosen accordingly to the sampling (between 90 and 120 windows). Each window was shortly equilibrated and then simulated for $6\,\si{\nano\second}$ in C36 and $10\,\si{\nano\second}$ in Martini (with PW). From the trajectories of the umbrella windows the free energy profile was calculated using \gromacs{} WHAM implementation \autocite{gromacsWHAMpaper}. For each forcefield five different profiles were obtained to estimate the statistical error.\\
+The starting configuration was set up in C36 and transferred to a Martini (with PW) structure with provided transformation tools \autocite{backwardpy}. In the Martini structures the mentioned elastic network was applied.\\
+The number of umbrella windows was chosen accordingly to the sampling (between 90 and 120 windows). Each window was shortly equilibrated and then simulated for $6\,\si{\nano\second}$ in C36 and $10\,\si{\nano\second}$ in Martini (with PW). From the trajectories of the umbrella windows the free energy profile was calculated using \gromacs{} WHAM implementation. For each forcefield five different profiles were obtained to estimate the statistical error.\\
 The presented results are based on a total simulation time of $6.33\,\si{\micro\second}$ for Martini, $5.64\,\si{\micro\second}$ for Martini with PW and $3.88\,\si{\micro\second}$ for C36. The temperature in the simulation was $300\si{\kelvin}$. % C36: 1=180, 4.2=135, 5=102, 5.2=102, 6=127, Mart: 1=134, 2=126, 3=130, 4=113, 5=130, MartPol: alle=113
 \section{Setup 3 - FAK on a \pip{} membrane}
 \label{setup:setup3}
